<resources>
    <string name="app_name">কলা চাষ</string>
    <string name="user_name">User name</string>
    <string name="user_password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="can_not_create">Can not create new account</string>
    <string name="invalid_account">Invalid Account</string>
    <string name="username_exists">Username Exists</string>
    <string name="welcome">Welcome</string>
    <string name="change_profile">Change Profile</string>
    <string name="change_profile_btn">Change profile</string>
    <string name="failed">Failed</string>
    <string name="logout">Logout</string>
</resources>
